--- a/Reborn/View/Base.lproj/Main.storyboard
+++ b/Reborn/View/Base.lproj/Main.storyboard
@@ -28,7 +28,7 @@
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jW9-gM-fZW" userLabel="Animation View">
                                                 <rect key="frame" x="117" y="165.5" width="180" height="180"/>
                                                 <subviews>
-                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FUC-K8-GFd">
+                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="AppIconWithShadow-Blue-HD" translatesAutoresizingMaskIntoConstraints="NO" id="FUC-K8-GFd">
                                                         <rect key="frame" x="45" y="45" width="90" height="90"/>
                                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     </imageView>
@@ -258,7 +258,7 @@
             <objects>
                 <viewController id="yhk-VJ-4nb" customClass="NewItemViewController" customModule="Reborn" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5tU-dT-BVc">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" tag="1" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eis-9Y-9bk" userLabel="Horizental Scroll View">
@@ -1762,7 +1762,7 @@
                                                     <constraint firstItem="SvP-rE-eKX" firstAttribute="top" secondItem="JAt-Bl-84Q" secondAttribute="bottom" constant="10" id="yX5-u1-fPi"/>
                                                 </constraints>
                                             </view>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wZU-qf-Hxm" userLabel="More Content View">
+                                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wZU-qf-Hxm" userLabel="More Content View">
                                                 <rect key="frame" x="30" y="247" width="157" height="157"/>
                                                 <subviews>
                                                     <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yNb-sx-kul" userLabel="More Content Button">
@@ -4471,11 +4471,12 @@
     </scenes>
     <inferredMetricsTieBreakers>
         <segue reference="mOc-DX-omU"/>
-        <segue reference="HdV-Uf-p4p"/>
+        <segue reference="LKv-l4-eYv"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
     <resources>
         <image name="AppIconWithShadow-Blue" width="60" height="60"/>
+        <image name="AppIconWithShadow-Blue-HD" width="381.33334350585938" height="381.33334350585938"/>
         <image name="AvatarMale" width="256" height="256"/>
         <image name="BlueCircle" width="580" height="580"/>
         <image name="CancelButton" width="28" height="28"/>
